# cdac-data-acquisition-system

./: .gitignore
All Details/Stm32f407_interfcing_with_i2c_lcd_dispaly/: .cproject  .mxproject  .project  Stm32f407_interfcing_with_i2c_lcd_dispaly Debug.launch  Stm32f407_interfcing_with_i2c_lcd_dispaly.ioc
MCPI/.metadata/: .log4j.xml  version.ini
MCPI/lm35/: .cproject  .mxproject  lm35 Debug.launch  lm35.ioc
actuator-nodes/: README.rst
android-app/: README.rst
android-app/led-temp/: settings.gradle
black-pill/: .gitignore
black-pill/src/: main.c
device-drivers/custom-class/: .gitignore  Makefile  readme.rst  usb_custom.c  usb_custom.h  usb_custom.mod.c
device-drivers/led-driver/: Makefile  publisher.c  subscriber.c
device-drivers/mosquitto-client/: Makefile  README.rst  frame.h  subscriber.c
inroduction/: 1.txt
pr_work/: task.md
pr_work/MQTT/: dependancies.txt
sensor-nodes/black-pill-uart/: CMakeLists.txt
sensor-nodes/black-pill-usb/: CMakeLists.txt  led-test.c  prj.conf  teensy.sh  usb-read_write.c
sensor-nodes/blue-pill/: CMakeLists.txt  Makefile  README.rst  dump.txt  flash-blue.sh  flash.sh  prj.conf
sensor-nodes/esp32/: CMakeLists.txt
sensor-nodes/lm35/: CMakeLists.txt  Makefile  prj.conf  usb-frame.h  usb-test.c
server/: README.rst  pom.xml
server/base-server/: pom.xml
server/mqtt/: HELP.md  pom.xml
server/ws-sample/: Project.postman_collection.json  pom.xml
usb-node/: README.md  prj.conf  usb-frame.h  usb_test.c
usb-node/boards/: stm32f401_mini.overlay
usb-node/src/: main.c
web-app/: README.rst
(+177 files in other folders)
